Fix topic hidden message when collapsed
Bug: 62073

--- a/modules/discussion/styles/mixins/collapse.less
+++ b/modules/discussion/styles/mixins/collapse.less
@@ -18,13 +18,11 @@
 
 // max-collapsed: children not visible, condensed title
 .flow-collapse-one-line {
-	.flow-titlebar {
-		height: 30px;
-	}
 	.flow-topic-title {
 		overflow: hidden;
 		white-space: nowrap;
 		padding: 0 !important;
+		margin-bottom: 0;
 
 		.flow-realtitle {
 			text-overflow: ellipsis;
